--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,79 @@
 a {
     text-decoration: none;
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    color: #fff;
+    background: url(../images/hero.jpg) no-repeat 50% 50%;
+    background-size: cover;
+    overflow-x: hidden;
+}
+
+#wrap {
+    width: 980px;
+    left: -490px;
+    top: 6%;
+    margin-top: 52px;
+    margin-left: 50%;
+    position: relative;
+}
+
+#showcase {
+    width: 100%;
+    height: 460px;
+}
+
+#showcase img {
+    cursor: pointer;
+    opacity: 0.6;
+    width: 320px;
+    height: 320px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+
+#item-title {
+    color: #fff;
+    font-size: 30px;
+    letter-spacing: 0.13em;
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: 32px;
+}
+
+.nav {
+    text-align: center;
+}
+
+.nav > button {
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    text-align: center;
+    background: #000;
+    border: none;
+    cursor: pointer;
+}
+
+.nav > button:focus {
+    border: none;
+    outline: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
